Fixed layout on smaller screens, removed overall scroll since it is not working properly

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -11,6 +11,9 @@ body:not(:footer) {
   text-shadow: 0 0 14px $glow;
 }
 
+/*------------------------------------------------------------------------------
+  HEADER
+------------------------------------------------------------------------------*/
 header {
   background-color: black;
   box-shadow: 1px 3px 1px rgba(0,0,0,0.2);
@@ -29,17 +32,22 @@ header {
   }
 }
 
+/*------------------------------------------------------------------------------
+  CONTENT
+------------------------------------------------------------------------------*/
+
 .content {
   color: $airplane-green;
   font-size: 1.2rem;
   letter-spacing: 3px;
   font-weight: 300;
-  line-height: 1.3;
+  line-height: 1.4;
   top: 0;
   left: 0;
   right: 0;
   position: absolute;
   margin: 0 auto;
+  min-height: 100vh;
   width: 100vw;
   z-index: 2;
 }
@@ -52,6 +60,7 @@ header {
 .flex-container {
   align-items: center;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   height: 100vh;
 
@@ -61,15 +70,25 @@ header {
   }
 
   .animation {
+    text-align: center;
     width: 100%;
-    height: auto;
-    padding: 2rem;
+
+    svg {
+      height: 200px;
+      width: 200px;
+      margin: 0 auto;
+    }
   }
 
   p {
-    padding-left: 1rem;
+    font-size: 1.1rem;
+    text-align: center;
   }
 }
+
+/*------------------------------------------------------------------------------
+  MONITOR BOX
+------------------------------------------------------------------------------*/
 
 #monitor-box p {
     margin: 0;
@@ -102,72 +121,45 @@ header {
 }
 
 #moving-bg {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-image: url('https://media.giphy.com/media/13bGgH9VnEDsuA/giphy.gif');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 110%;
-    filter: blur(8px);
-}
-#blue-window {
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: $midnight;
-    opacity: 0.8;
-    position: fixed;
-}
-
-.arrow {
-  position: absolute;
-  width: 69px;
-  padding-bottom: 10px;
-}
-
-.protractor {
-  width: 250px;
-  margin-bottom: -100px;
-  animation-name: rotate-protractor;
-  animation-duration: 6s;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-}
-.protractor-box {
-  width: 100%;
-  height: 100vh;
-
+  background-image: url('https://media.giphy.com/media/108UaZudmdlb4Q/giphy.gif');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
   position: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  filter: blur(4px);
 }
 
-@keyframes rotate-protractor {
-    0%  {
-      transform: rotate(0deg);
-    }
-    100%  {
-      transform: rotate(60deg);
-    }
+#blue-window {
+  background-color: $midnight;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  opacity: 0.8;
+  position: fixed;
 }
+
+
+/*------------------------------------------------------------------------------
+  FOOTER
+------------------------------------------------------------------------------*/
 
 footer {
   background-color: #000;
+  bottom: 0;
+  box-sizing: border-box;
   color: #fff;
   font-family: 'Open Sans', sans-serif;
-  height: 100vh;
   left: -9px;
-  bottom: 0;
-  position: absolute;
+  min-height: 100vh;
   padding: 1rem 4rem;
   width: 100vw;
   z-index: 3;
-  box-sizing: border-box;
 
   .logo {
     height: 12rem;
@@ -175,25 +167,38 @@ footer {
   }
 
   .footer__container {
-    display: flex;
-    align-items: flex-start;
-    width: 100%;
+    margin: 0 auto;
   }
 
+  .footer__container-heading {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    margin-top: 0;
+    text-align: left;
+  }
+
+  P {
+    font-size: 1rem;
+  }
+
+  .footer__container-item2 {
+    margin-top: 4rem;
+  }
+
+
   .socialmedia-logo {
-    width: 3rem;
     height: 3rem;
     margin-right: 1rem;
+    width: 3rem;
   }
 
   h2 {
-    margin-bottom: 4rem;
-    margin-top: 0;
+    margin: 0 0 4rem;
   }
 
   ul {
-    padding: 0;
     list-style: none;
+    padding: 0;
   }
 
   li {
@@ -201,34 +206,14 @@ footer {
   }
 
   .flex-a {
-    display: flex;
     align-items: center;
+    display: flex;
     color: $rhinowash-yellow;
-    text-decoration: none;
     font-weight: 600;
+    text-decoration: none;
 
     &:hover {
       color: $rhinowash-light;
     }
-  }
-
-  .footer__container-item1 {
-    margin-right: 4rem;
-    width: 60%;
-
-    p {
-      font-size: 1rem;
-    }
-  }
-
-  .footer__container-item2 {
-    width: 30%;
-  }
-
-  .footer__container-heading {
-    text-align: left;
-    font-size: 2rem;
-    margin-bottom: 2rem;
-    margin-top: 0;
   }
 }
